Adicionado seçao com dados em tabela

--- a/exercises/3_4/html_semantico.html
+++ b/exercises/3_4/html_semantico.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <style>
+      table, th, td {
+        border: 1px solid black;
+      }
+    </style>
   </head>
   <body>
     <header class="header">
@@ -16,7 +21,40 @@
           <li><a href="">Contact</a></li>
         </ul>
       </nav>
-    </header> 
-    
+    </header>
+    <article class="artigos">
+      <h1>Fatos sobre o Stomatopoda</h1>
+      <section class="general-info">
+        <table style="width:100%">
+        <tr>
+          <th>Reino:</th>
+          <td>Animalia</td>
+        </tr>
+        <tr>
+          <th>Filo:</th>
+          <td>Arthropoda</td>
+        </tr>
+        <tr>
+          <th>Subfilo:</th>
+          <td>Crustacea</td>
+        </tr>
+        <tr>
+          <th>Classe:</th>
+          <td>Malacostraca</td>
+        </tr>
+        <tr>
+          <th>Subclasse:</th>
+          <td>Hoplocarida</td>
+        </tr>
+        <tr>
+          <th rowspan="2">Ordem:</th>
+          <td>Stomatopoda</td>
+        </tr>
+        <tr>
+          <td>Latreille, 1817</td>
+        </tr>
+      </table>
+      </section>
+    </article>"
   </body>
 </html>
