Adicionado link de video em barra lateral

--- a/exercises/3_4/html_semantico.html
+++ b/exercises/3_4/html_semantico.html
@@ -7,6 +7,14 @@
       table, th, td {
         border: 1px solid black;
       }
+      .side-bar {
+        background-color: lightgrey;
+        padding: 20px;
+        width: 200px;
+        float: right;
+        position: relative;
+        bottom: 500px;
+      }
     </style>
   </head>
   <body>
@@ -66,6 +74,12 @@
         <a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a><br>
         <a href="https://factanimal.com/mantis-shrimp/">Interesting Facts</a>
       </section>
+      <aside class="side-bar">
+        <section class="Punching Video">
+          <h3>Mantis Shrimp is a Punching God</h3>
+          <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">Mantis Shrimp Heavy Boxer</a>
+        </section>          
+      </aside>
     </article>
   </body>
 </html>
