--- a/exercises/3_4/html_semantico.html
+++ b/exercises/3_4/html_semantico.html
@@ -81,5 +81,8 @@
         </section>          
       </aside>
     </article>
+    <footer>
+        <p>Conteúdo compilado por: Kevin Mendes</p>
+    </footer>
   </body>
 </html>
