--- a/exercises/3_4/html_semantico.html
+++ b/exercises/3_4/html_semantico.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <style>
+    <title>Mantis Shrimp Rules</title>
+     <style>
       table, th, td {
         border: 1px solid black;
       }
@@ -24,15 +24,15 @@
       </section>
       <nav class="navigation">
         <ul>
-          <li><a href="">Pagina Inicial</a></li>
-          <li><a href="">Sobre</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#">Pagina Inicial</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#who">Autor</a></li>
         </ul>
       </nav>
     </header>
     <article class="artigos">
       <h1>Fatos sobre o Stomatopoda</h1>
-      <section class="general-info">
+      <section class="general-info" id="sobre">
         <p>Informações gerais sobre o Stomatopoda (nome científico: <strong><em>Odontodactylus scyllarus</em></strong>)</p>
         <table style="width:100%">
         <tr>
@@ -81,7 +81,7 @@
         </section>          
       </aside>
     </article>
-    <footer>
+    <footer id="who">
         <p>Conteúdo compilado por: Kevin Mendes</p>
     </footer>
   </body>
