--- a/projetos/html-css/html_css_project.html
+++ b/projetos/html-css/html_css_project.html
@@ -51,6 +51,15 @@
         padding: 14px 16px;
         text-decoration: none;
       }
+      #who {
+        position: absolute;
+        bottom: 100;
+        text-align: center;
+        left: 0;
+        right: 0;
+        background: lightgray;
+        font-weight:bolder;
+       }
 
       /* Change the link color to #111 (black) on hover */
       .top-bar-item a:hover {
@@ -60,6 +69,7 @@
       .artigos {
         margin-top: 50px;
       }
+      
     </style>
   </head>
   <body>
@@ -181,14 +191,9 @@
         <img src="https://i.pinimg.com/originals/02/0b/db/020bdb70aee7164cbe118137f323dc40.jpg" alt="Amigurumi of Happy from Fairy Tail" width="50%">
         <img src="https://i.pinimg.com/originals/1e/d8/5b/1ed85bfc6d60df1ebac828cba5d497df.png" alt="Crochet examples" width="50%">
       </section>
-      <section class="references">
-        <h2><strong>Bibliography</strong></h2>
-        <a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a><br>
-        <a href="https://factanimal.com/mantis-shrimp/">Interesting Facts</a>
-      </section>
     </article>
     <footer id="who">
-        <p>Conteúdo compilado por: Kevin Mendes </p>
+        <p>Conteúdo compilado por: <a href="https://www.linkedin.com/in/kevin-mendes-4a400a158/" target="_blank">Kevin Mendes</a> </p>
     </footer>
     </section>
   </body>
