Alterações no exercício

--- a/exercises/6.2/form.html
+++ b/exercises/6.2/form.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <section class="section is-small">
-        <form name="form" onsubmit="return checker()" method="POST" id="wholeForm">
+        <form name="form" method="POST" id="wholeForm">
             <p class="subtitle has-text-centered">Dados Pessoais</p>
             <div class="field">
                 <label class="label">Nome:</label>
@@ -93,7 +93,7 @@
                     <input class="input" type="text" placeholder="Text input" id="date">
                 </div>
             </div>
-            <input type="submit" id="submit" class="button is-success" onclick="showInput()"></input class="input">
+            <input type="submit" id="submit" class="button is-success"></input>
             <button type="reset" class="button is-danger">Clear Form</button><br>
             <label>Your input class="input":</label>
             <p><span id='display'></span></p>
